Fix - Whitespace

--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,7 @@ Hero
 }
 .hero-banner {
   text-align: center;
-  padding: 0 3rem;
+  padding: 0 1rem;
   color: var(--clr-white);
 }
 .hero-banner h1 {
